fix overflow css issue

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -19,7 +19,7 @@ html, body {
   background-size: cover;
   background-position: center;
   text-align: center;
-  overflow: auto;
+  overflow: hidden;
 }
 
 #home-title-wrapper {
